--- a/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/controller.yaml
+++ b/argocd-helm-charts/aws-ebs-csi-driver/charts/aws-ebs-csi-driver/templates/controller.yaml
@@ -88,7 +88,7 @@ spec:
             {{- with .Values.controller.httpEndpoint }}
             - --http-endpoint={{ . }}
             {{- end }}
-            {{- if .Values.controller.sdkDebugLog }}
+            {{- if or .Values.controller.sdkDebugLog .Values.debugLogs }}
             - --aws-sdk-debug-log=true
             {{- end}}
             {{- if .Values.controller.batching }}
@@ -103,7 +103,11 @@ spec:
             {{- if .Values.controller.otelTracing }}
             - --enable-otel-tracing=true
             {{- end}}
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.controller.logLevel }}
+            {{- end }}
             {{- range .Values.controller.additionalArgs }}
             - {{ . }}
             {{- end }}
@@ -184,15 +188,15 @@ spec:
               path: /healthz
               port: healthz
             initialDelaySeconds: 10
-            timeoutSeconds: 3
+            timeoutSeconds: 60
             periodSeconds: 10
-            failureThreshold: 5
+            failureThreshold: 10
           readinessProbe:
             httpGet:
               path: /healthz
               port: healthz
             initialDelaySeconds: 10
-            timeoutSeconds: 3
+            timeoutSeconds: 60
             periodSeconds: 10
             failureThreshold: 5
           {{- with .Values.controller.resources }}
@@ -203,6 +207,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         - name: csi-provisioner
           image: {{ printf "%s%s:%s" (default "" .Values.image.containerRegistry) .Values.sidecars.provisioner.image.repository .Values.sidecars.provisioner.image.tag }}
           imagePullPolicy: {{ default .Values.image.pullPolicy .Values.sidecars.provisioner.image.pullPolicy }}
@@ -211,7 +216,11 @@ spec:
             - --timeout=60s
             {{- end }}
             - --csi-address=$(ADDRESS)
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.sidecars.provisioner.logLevel }}
+            {{- end }}
             - --feature-gates=Topology=true
             {{- if .Values.controller.extraCreateMetadata }}
             - --extra-create-metadata
@@ -262,6 +271,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3302
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.provisioner.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -270,6 +285,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         - name: csi-attacher
           image: {{ printf "%s%s:%s" (default "" .Values.image.containerRegistry) .Values.sidecars.attacher.image.repository .Values.sidecars.attacher.image.tag }}
           imagePullPolicy: {{ default .Values.image.pullPolicy .Values.sidecars.attacher.image.pullPolicy }}
@@ -278,7 +294,11 @@ spec:
             - --timeout=6m
             {{- end }}
             - --csi-address=$(ADDRESS)
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.sidecars.attacher.logLevel }}
+            {{- end }}
             - --leader-election={{ .Values.sidecars.attacher.leaderElection.enabled | required "leader election state for csi-attacher is required, must be set to true || false." }}
             {{- if .Values.sidecars.attacher.leaderElection.enabled }}
             {{- if .Values.sidecars.attacher.leaderElection.leaseDuration }}
@@ -321,6 +341,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3303
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.attacher.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -329,6 +355,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         {{- if or .Values.sidecars.snapshotter.forceEnable (.Capabilities.APIVersions.Has "snapshot.storage.k8s.io/v1beta1") (.Capabilities.APIVersions.Has "snapshot.storage.k8s.io/v1") }}
         - name: csi-snapshotter
           image: {{ printf "%s%s:%s" (default "" .Values.image.containerRegistry) .Values.sidecars.snapshotter.image.repository .Values.sidecars.snapshotter.image.tag }}
@@ -336,7 +363,11 @@ spec:
           args:
             - --csi-address=$(ADDRESS)
             - --leader-election=true
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.sidecars.snapshotter.logLevel }}
+            {{- end }}
             {{- if .Values.controller.extraCreateMetadata }}
             - --extra-create-metadata
             {{- end}}
@@ -370,6 +401,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3306
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.snapshotter.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -378,6 +415,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         {{- end }}
         {{- if (.Values.controller.volumeModificationFeature).enabled }}
         - name: volumemodifier
@@ -388,7 +426,11 @@ spec:
             - --timeout=60s
             {{- end }}
             - --csi-address=$(ADDRESS)
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.sidecars.volumemodifier.logLevel }}
+            {{- end }}
             - --leader-election={{ .Values.sidecars.volumemodifier.leaderElection.enabled | required "leader election state for csi-volumemodifier is required, must be set to true || false." }}
             {{- if .Values.sidecars.volumemodifier.leaderElection.enabled }}
             {{- if .Values.sidecars.volumemodifier.leaderElection.leaseDuration }}
@@ -431,6 +473,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3307
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.volumemodifier.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -439,6 +487,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         {{- end }}
         - name: csi-resizer
           image: {{ printf "%s%s:%s" (default "" .Values.image.containerRegistry) .Values.sidecars.resizer.image.repository .Values.sidecars.resizer.image.tag }}
@@ -451,7 +500,11 @@ spec:
             - --extra-modify-metadata
             {{- end}}
             - --csi-address=$(ADDRESS)
+            {{- if .Values.debugLogs }}
+            - --v=7
+            {{- else }}
             - --v={{ .Values.sidecars.resizer.logLevel }}
+            {{- end }}
             - --handle-volume-inuse-error=false
             {{- with .Values.sidecars.resizer.leaderElection }}
             - --leader-election={{ .enabled | default true }}
@@ -498,6 +551,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /var/lib/csi/sockets/pluginproxy/
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3304
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.resizer.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -506,11 +565,13 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
         - name: liveness-probe
           image: {{ printf "%s%s:%s" (default "" .Values.image.containerRegistry) .Values.sidecars.livenessProbe.image.repository .Values.sidecars.livenessProbe.image.tag }}
           imagePullPolicy: {{ default .Values.image.pullPolicy .Values.sidecars.livenessProbe.image.pullPolicy }}
           args:
             - --csi-address=/csi/csi.sock
+            - --probe-timeout=60s
             {{- if and (.Values.controller.enableMetrics) (not (regexMatch "(-metrics-address)" (join " " .Values.sidecars.livenessProbe.additionalArgs))) }}
             - --metrics-address=0.0.0.0:3305
             {{- end}}
@@ -524,6 +585,12 @@ spec:
           volumeMounts:
             - name: socket-dir
               mountPath: /csi
+          {{- if .Values.controller.enableMetrics }}
+          ports:
+            - name: metrics
+              containerPort: 3305
+              protocol: TCP
+          {{- end }}
           {{- with default .Values.controller.resources .Values.sidecars.livenessProbe.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
@@ -532,6 +599,7 @@ spec:
           securityContext:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          terminationMessagePolicy: FallbackToLogsOnError
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
       {{- range .Values.imagePullSecrets }}
