--- a/argocd-helm-charts/prometheus-linuxaid/rules/disk.yaml
+++ b/argocd-helm-charts/prometheus-linuxaid/rules/disk.yaml
@@ -45,7 +45,7 @@ groups:
             or on(mountpoint, certname) count by (mountpoint, certname, threshold)
             (record::monitor::system::disk::filesystem_space_percentage) * 0 + 97
            )
-        ))
+        )) unless on(mountpoint,certname) threshold::monitor::system::disk::usage::ignore
         and on(certname) obmondo_monitoring{alert_id="monitor::system::disk::usage"} > 0
       for: 10m
       labels:
