--- a/argocd-helm-charts/tigera-operator/charts/tigera-operator/templates/tigera-operator/02-rolebinding-tigera-operator-secrets.yaml
+++ b/argocd-helm-charts/tigera-operator/charts/tigera-operator/templates/tigera-operator/02-rolebinding-tigera-operator-secrets.yaml
@@ -7,8 +7,8 @@ metadata:
     {{- include "tigera-operator.labels" (dict "context" .) | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{.Release.Namespace}}
-    namespace: {{.Release.Namespace}}
+    name: tigera-operator
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: tigera-operator-secrets
