fix(cert-manager): use http01.solvers.ingress.ingressClassName field name

--- a/argocd-helm-charts/cert-manager/templates/clusterissuer.yaml
+++ b/argocd-helm-charts/cert-manager/templates/clusterissuer.yaml
@@ -72,7 +72,7 @@ spec:
     {{- else if eq (toString $v.type) "http"}}
     - http01:
         ingress:
-          class: {{ $v.http01.ingress.ingressClassName }}
+          ingressClassName: {{ $v.http01.ingress.ingressClassName }}
     {{- end -}}
     {{- end }}
 {{- else }}
