fix: run the agent exporter and r10k on the same node where puppetserver is running

--- a/argocd-helm-charts/openvox/values.yaml
+++ b/argocd-helm-charts/openvox/values.yaml
@@ -132,6 +132,17 @@ puppetserver:
       jmx:
         enabled: false
 
+  affinity:
+    podAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+      - labelSelector:
+          matchExpressions:
+          - key: app.kubernetes.io/component
+            operator: In
+            values:
+            - puppetserver
+        topologyKey: kubernetes.io/hostname
+
 postgresql:
   instance: 1
   size: 2Gi
